objects/LiteratureOrderPackage__c.object
<CustomObject>
    <fields>
        <fullName>Charge__c</fullName>
        <description>Charge
number(9,2)</description>
        <label>Charge</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>LiteratureShipMethod__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Literature Ship Method</label>
        <referenceTo>LiteratureShipMethod__c</referenceTo>
        <relationshipLabel>Literature Order Packages</relationshipLabel>
        <relationshipName>LiteratureOrderPackages</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>OrderIdUrl__c</fullName>
        <formula>HYPERLINK('/'&amp; LiteratureOrder__c, LiteratureOrder__r.OrderId__c,  '_self')</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Order Id</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PackageIdUrl__c</fullName>
        <formula>HYPERLINK('/'&amp; Id,  PackageId__c, '_self' )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Package Id</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PackageId__c</fullName>
        <description>PackageId
varchar2(50)</description>
        <externalId>true</externalId>
        <label>Package Id</label>
        <length>50</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>ShipDate__c</fullName>
        <description>ShipDate
date</description>
        <label>Ship Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>TrackingNumber__c</fullName>
        <description>TrackingNumber
varchar2(30)</description>
        <label>Tracking Number</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Tracking__c</fullName>
        <formula>HYPERLINK( LiteratureShipMethod__r.TrackUrl__c &amp; TrackingNumber__c ,  TrackingNumber__c ,'_Blank')</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Tracking</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Weight__c</fullName>
        <description>Weight
number(9,2)</description>
        <label>Weight</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LiteratureOrder__c</fullName>
        <label>Literature Order</label>
        <referenceTo>LiteratureOrder__c</referenceTo>
        <relationshipLabel>Literature Order Packages</relationshipLabel>
        <relationshipName>LiteratureOrderPackages</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <description>This contains the order packages data from Literature Fulfillment System (Nexttouch)</description>
    <label>Literature Order Package</label>
    <nameField>
        <displayFormat>LOP-{0000000000}</displayFormat>
        <label>Literature Order Package Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Literature Order Packages</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>